// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`is multiple 1`] = `
<div
  className="MuiOutlinedInput-root MuiInputBase-root MuiInputBase-colorPrimary  css-1yk1gt9-MuiInputBase-root-MuiOutlinedInput-root-MuiSelect-root"
  onClick={[Function]}
>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    className="MuiSelect-select MuiSelect-outlined MuiSelect-multiple MuiOutlinedInput-input MuiInputBase-input css-11u53oe-MuiSelect-select-MuiInputBase-input-MuiOutlinedInput-input"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    role="button"
    tabIndex={0}
  >
    <span
      className="notranslate"
    >
      ​
    </span>
  </div>
  <input
    aria-hidden={true}
    className="MuiSelect-nativeInput css-yf8vq0-MuiSelect-nativeInput"
    onAnimationStart={[Function]}
    onChange={[Function]}
    tabIndex={-1}
  />
  <svg
    aria-hidden={true}
    className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconOutlined css-hfutr2-MuiSvgIcon-root-MuiSelect-icon"
    color="transparent"
    focusable="false"
    viewBox="0 0 20 20"
  >
    <path
      d="M15.6569 7.65685L10 13.3137L4.34315 7.65685"
      stroke="#171F46"
    />
  </svg>
  <fieldset
    aria-hidden={true}
    className="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
  >
    <legend
      className="css-hdw1oc"
    >
      <span
        className="notranslate"
      >
        ​
      </span>
    </legend>
  </fieldset>
</div>
`;

exports[`renders correctly props object 1`] = `
<div
  className="MuiOutlinedInput-root MuiInputBase-root MuiInputBase-colorPrimary test css-1yk1gt9-MuiInputBase-root-MuiOutlinedInput-root-MuiSelect-root"
  onClick={[Function]}
>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="testId"
    className="MuiSelect-select MuiSelect-outlined MuiOutlinedInput-input MuiInputBase-input css-11u53oe-MuiSelect-select-MuiInputBase-input-MuiOutlinedInput-input"
    id="testId"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    role="button"
    tabIndex={0}
  >
    <span
      className="notranslate"
    >
      ​
    </span>
  </div>
  <input
    aria-hidden={true}
    className="MuiSelect-nativeInput css-yf8vq0-MuiSelect-nativeInput"
    onAnimationStart={[Function]}
    onChange={[Function]}
    tabIndex={-1}
    value=""
  />
  <svg
    aria-hidden={true}
    className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconOutlined css-hfutr2-MuiSvgIcon-root-MuiSelect-icon"
    color="transparent"
    focusable="false"
    viewBox="0 0 20 20"
  >
    <path
      d="M15.6569 7.65685L10 13.3137L4.34315 7.65685"
      stroke="#171F46"
    />
  </svg>
  <fieldset
    aria-hidden={true}
    className="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
  >
    <legend
      className="css-hdw1oc"
    >
      <span
        className="notranslate"
      >
        ​
      </span>
    </legend>
  </fieldset>
</div>
`;
